<resources>
    <string name="app_name">Punto_4</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="figura">AREA FIGURAS GEOMETRICAS</string>
    <string name="cuadrado">Cuadrado</string>
    <string name="triangulo">Triangulo</string>
    <string name="circulo">Circulo</string>
    <string name="rectangulo">Rectangulo</string>
    <string name="base">Base</string>
    <string name="altura">Altura</string>
    <string name="radio">Radio</string>
    <string name="lado">Lado</string>
    <string name="lado1">Lado1</string>
    <string name="lado2">Lado2</string>
    <string name="ingresar">Ingrese El Valor</string>
    <string name="area">El Area De La Figura Es:</string>
    <string name="calcular">Calcular</string>


</resources>
